# rtp-proxy

./: CMakeLists.txt  README.md  quick_test.sh  rist_cmd  rpi.md  run_all.sh  setup_scenario_1.sh  setup_scenario_2.sh  setup_scenario_3.sh  test_rtp_to_lc.sh
assets/: rtp  saved.sdp
data/: org_rtp_ts_reconstruct_20230404.txt  original_timings.txt
data/23-04-04/: info.txt  org_rtp_ts_20230404.txt
data/23-04-13/: info.txt  initial.txt  reconstructed.txt
data/23-04-24-scenario-2-12h/: initial.txt  jittered.txt  reconstructed.txt
data/23-04-25-scenario-2-1h/: initial.txt  jittered.txt  reconstructed.txt
data/arrival_time/23-04-25-scenario-1-1h/: initial.txt  jittered.txt  reconstructed.txt
data/arrival_time/23-04-26-scenario-2-1h/: initial.txt  jittered.txt  reconstructed.txt
data/arrival_time/23-04-26-scenario-3-1h/: initial.txt  jittered.txt  reconstructed.txt
data/jittery_rtp_to_lc/23-04-26-scenario-1-1h/: initial.txt  jittered.txt  reconstructed.txt
data/jittery_rtp_to_lc/23-04-26-scenario-2-1h/: initial.txt  jittered.txt  reconstructed.txt
data/jittery_rtp_to_lc/23-04-26-scenario-3-1h/: initial.txt  jittered.txt  reconstructed.txt
data/origin_rtp_timestamp/23-04-25-scenario-1-1h/: initial.txt  jittered.txt  reconstructed.txt
data/origin_rtp_timestamp/23-04-25-scenario-3-1h/: initial.txt  jittered.txt  reconstructed.txt
data/origin_rtp_timestamp/23-04-26-scenario-1-1h/: initial.txt  jittered.txt  reconstructed.txt
include/: rtp_packet.h  rtppacket.h  udp_socket.h
src/: main.cpp  rtp_packet.cpp  rtppacket.cpp  udp_socket.cpp
(+141 files in other folders)
